部分代码逻辑重构